Create base repository and complete albums module
